[package]
name = "sample_explorer_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
eframe = "0.27"
egui_extras = { version = "0.27", features = ["image"] }
rodio = { version = "0.17", default-features = true, features = ["wav", "flac", "vorbis", "mp3"] }
hound = "3.5"
rustfft = "6.2"
rfd = "0.14"
once_cell = "1.19"
parking_lot = "0.12"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
rand = "0.8"
